perf(discord): stop allocating the whole map for a small crop